envoy.yaml
admin:
    access_log_path: /dev/null
    address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
    listeners:
        - name: http_listener
          address:
              socket_address: { address: 0.0.0.0, port_value: 4000 }
          filter_chains:
              - filters:
                    - name: envoy.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                          use_remote_address: true
                          stat_prefix: local
                          access_log:
                              name: envoy.access_loggers.file
                              typed_config:
                                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                                  path: /tmp/jsso2.log
                          route_config:
                              validate_clusters: true
                              virtual_hosts:
                                  - name: localhost
                                    domains: ["*"]
                                    routes:
                                        - match:
                                              prefix: "/"
                                              grpc: {}
                                          route:
                                              cluster: localhost:backend:grpc
                                        - match:
                                              prefix: "/grpcui"
                                          route:
                                              cluster: localhost:backend:debug
                                        - match:
                                              prefix: "/debug"
                                          route:
                                              cluster: localhost:backend:debug
                                        - match:
                                              prefix: "/metrics"
                                          route:
                                              cluster: localhost:backend:debug
                                        - match:
                                              prefix: "/envoy/"
                                          route:
                                              prefix_rewrite: "/"
                                              cluster: localhost:envoy:admin
                                        - match:
                                              prefix: "/envoy"
                                          route:
                                              prefix_rewrite: "/"
                                              cluster: localhost:envoy:admin
                                        - match:
                                              prefix: "/"
                                          route:
                                              cluster: localhost:frontend:http
                          http_filters:
                              - name: envoy.filters.http.router
    clusters:
        - name: localhost:backend:grpc
          type: static
          lb_policy: random
          connect_timeout: 1s
          http2_protocol_options: {}
          health_checks:
              - timeout: 1s
                interval: 1s
                healthy_threshold: 1
                unhealthy_threshold: 1
                grpc_health_check: {}
          load_assignment:
              cluster_name: localhost:backend:grpc
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  pipe:
                                      path: "app.socket"
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 127.0.0.1
                                      port_value: 9000
        - name: localhost:backend:debug
          type: static
          lb_policy: random
          connect_timeout: 1s
          health_checks:
              - timeout: 1s
                interval: 1s
                healthy_threshold: 1
                unhealthy_threshold: 1
                http_health_check:
                    host: "localhost"
                    path: "/healthz"
                    request_headers_to_add:
                        - header:
                              key: user-agent
                              value: kube-probe/not-really
                          append: false
          load_assignment:
              cluster_name: localhost:backend:debug
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 127.0.0.1
                                      port_value: 8081
        - name: localhost:frontend:http
          type: static
          lb_policy: random
          connect_timeout: 1s
          health_checks:
          load_assignment:
              cluster_name: localhost:frontend:http
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 127.0.0.1
                                      port_value: 5000
        - name: localhost:envoy:admin
          type: static
          lb_policy: random
          connect_timeout: 1s
          health_checks:
              - timeout: 1s
                interval: 1s
                healthy_threshold: 1
                unhealthy_threshold: 1
                http_health_check:
                    host: "localhost:9901"
                    path: "/ready"
          load_assignment:
              cluster_name: localhost:envoy:admin
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 127.0.0.1
                                      port_value: 9901

layered_runtime:
    layers:
        - name: static_layer_0
          static_layer:
              overload:
                  global_downstream_max_connections: 50000
